# eNMF

./: LICENSE  README.md  pyproject.toml
Analysis/: Movielens.ipynb  RSR_verification.py  check_enmf_results.py  compute_enmf_scale.py  compute_stats.py  permutation_comp_exacts.py  permutation_comp_utils.py  permutation_comp_verb.py
Dataset/: Datasets_preparation_and_check.ipynb  preprocess_audiomnist_dataset.py  preprocess_movielens.py  readme.md  snr_data_generation.ipynb
Experiments/: compare_methods.py  enmf_configs.py  experiment_scripts_audio.py  experiment_scripts_enmf.py  experiment_scripts_exacts.py  experiment_scripts_face.py  experiment_scripts_nmfc.py  experiment_scripts_syn.py  experiment_scripts_verb.py  experiment_share_init_factors.py  fix_exacts_RSR_exp.py  run_experiment_demo.py
Experiments/configs/: exact_data_algo_RSR.json  exact_data_algo_exp.json  real_data_algo_NMFC.json  real_data_algo_exp1.json  syn_data_algo_exp.json
src/initialization_algos/: init_algo.py  pba_algo_utils.py
src/nmf_algos/: NMF_base.py  __init__.py
src/nmf_algos/algorithms/: NMFC_ADM.py  NMFC_ENMF.py  NMFC_MUL.py  NMFC_SCD.py  NMF_ADMM.py  NMF_ALS.py  NMF_AOADMM.py  NMF_ENMF.py  NMF_GRADMUL.py  NMF_HALS.py  NMF_MUL.py  __init__.py
src/nmf_algos/dataproto/: data_config.proto  data_config_pb2.py
src/nmf_algos/utils/: ENMF_utils.py  algo_utils.py  linalg_utils.py  utils.py
