[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "nmf-algos"
version = "0.1.0"
description = "A collection of NMF algorithms with a common base class."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "" }]
dependencies = ["numpy>=1.23", "scipy>=1.10","protobuf>=4.24"]

[tool.setuptools.packages.find]
where = ["src"]
